# Techcrunch_project

./: .gitignore  README.md  airflow_dag.py  main.py  profil.json  pyproject.toml  schema.sql
airflow/dags/: airflow_dag.py  techcrunch_articles.json
api/: api.py
db/: database.py  schema.sql
docker/: Dockerfile  docker-compose.yaml
src/scrapper/: main.py
