[project]
name = "Techcrunch_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.10.5",
    "icecream>=2.1.4",
    "lxml>=5.3.1",
    "lxml-html-clean>=0.4.1",
    "parsel>=1.10.0",
    "requests>=2.32.3",
]
